# tenzing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING  NOTICE.md  README.md  algorithm.hpp  array.hpp  coo_mat.hpp  csr_mat.hpp  cuda_runtime.h  fake_cuda.hpp  fake_mpi.hpp  graph.cpp  graph.hpp  load-env.sh  main.cpp  main.cu  mpi.h  numeric.hpp  operation.cpp  operation.hpp  ops_spmv.cuh  ops_spmv.hpp  row_part_spmv.cuh  schedule.cpp  schedule.hpp  split_coo_mat.hpp
.github/workflows/: cmake.yml  cuda-102.yml  ubuntu1804_cuda102_openmpi.yml  ubuntu2004_cuda116_openmpi.yml
cmake/modules/: FindNUMA.cmake
docs/: api.md  ascicgpu.md  dfs.md  mcts.md  perlmutter.md  vortex.md
include/halo_exchange/: dim.hpp  ops_halo_exchange.hpp
include/sched/: benchmarker.hpp  brute.hpp  cast.hpp  counters.hpp  cuda_runtime.h  decision.hpp  graph.hpp  init.hpp  macro_at.hpp  mcts.hpp  mcts_node.hpp  mcts_strategy.hpp  mcts_strategy_anti_corr.hpp  mcts_strategy_avg_time.hpp  mcts_strategy_balance_hist.hpp  mcts_strategy_coverage.hpp  mcts_strategy_fast_min.hpp  mcts_strategy_fastest.hpp  mcts_strategy_min_time.hpp  mcts_strategy_norm_anti_corr.hpp  mcts_strategy_norm_root_corr.hpp  mcts_strategy_random.hpp  mcts_strategy_unvisited.hpp  numa.hpp  numeric.hpp  operation.hpp  operation_compound.hpp  operation_serdes.hpp  ops_cuda.hpp  ops_mpi.hpp  platform.hpp  randomness.hpp  sched.hpp  schedule.hpp  sequence.hpp  state.hpp  trap.hpp  version.hpp  version.hpp.in
include/sched/cuda/: ops_cuda.hpp
include/sched/halo_exchange/: cuda_memory.hpp  ops_halo_exchange.hpp
include/sched/mpi/: ops_mpi.hpp
include/sched/spmv/: array.hpp  ops_spmv.cuh  partition.hpp  row_part_spmv.cuh
include/spmv/: coo_mat.hpp  row_part_spmv.cuh
include/tenzing/: benchmarker.hpp  bijection.hpp  cast.hpp  counters.hpp  decision.hpp  event_synchronizer.hpp  graph.hpp  init.hpp  macro_at.hpp  mcts.hpp  mcts_node.hpp  mcts_strategy.hpp  mcts_strategy_unvisited.hpp  numa.hpp  numeric.hpp  operation_compound.hpp  reproduce.hpp  sequence.hpp  state.hpp  trap.hpp  version.hpp.in
include/tenzing/cuda/: cuda_runtime.hpp  ops_cuda.hpp
include/tenzing/halo_exchange/: cuda_memory.hpp  ops_halo_exchange.hpp
include/tenzing/mpi/: ops_mpi.hpp
include/tenzing/spmv/: algorithm.hpp  array.hpp  csr_mat.hpp  mcts_csv.cuh  ops_spmv.cuh  partition.hpp  row_part_spmv.cuh
perlmutter/: halo_mcts_coverage_1n_4r.sh  halo_mcts_min_time.sh  halo_mcts_min_time_1n_4r.sh  spmv_brute.sh  spmv_whole_tree.sh  src_spmv_coverage.sh  src_spmv_coverage_1n_4r_15000.sh  src_spmv_coverage_1n_4r_150000.sh  src_spmv_coverage_1n_4r_1500000.sh  src_spmv_coverage_2n_8r_3000000.sh  src_spmv_min_time.sh  src_spmv_min_time_1n_4r.sh  src_spmv_random.sh  src_spmv_random_1n_4r.sh
postprocess/: README.md  bbmat.csv  load-env.sh  postprocess.py  pyproject.toml  src_spmv_coverage.csv
python/: example.py
scripts/perlmutter/: .gitignore  spmv.sh
src/: CMakeLists.txt  benchmarker.cpp  brute.cpp  counters.cpp  event_synchronizer.cpp  graph.cpp  init.cpp  mcts.cpp  mcts_node.cpp  numa.cpp  numeric.cpp  operation.cpp  operation_serdes.cpp  ops_cuda.cpp  ops_cuda.cu  ops_mpi.cpp  platform.cpp  pybind.cpp  randomness.cpp  reproduce.cpp  schedule.cpp  sequence.cpp  state.cpp  test_impl.cpp  trap.cpp
src/cuda/: ops_cuda.cpp
src/halo_exchange/: CMakeLists.txt  ops_halo_exchange.cu
src/mpi/: ops_mpi.cpp
src/spmv/: CMakeLists.txt  ops_spmv.cu
src_halo/: CMakeLists.txt  cuda_memory.hpp  dim.hpp  halo.cu  ops_halo_exchange.cu  ops_halo_exchange.hpp
src_mcts_halo/: CMakeLists.txt  cuda_memory.hpp  halo.cu  halo_anticorr.cu  halo_balance.cu  halo_coverage.cu  halo_fastest.cu  halo_min_time.cu  ops_halo_exchange.cu  ops_halo_exchange.hpp  pattern_halo_exchange.cu  pattern_halo_exchange.hpp  run_strategy.hpp
src_mcts_test/: CMakeLists.txt  mcts.cpp  pingpong.cpp
src_spmv/: CMakeLists.txt  array.hpp  csr_mat.hpp  mcts_csv.cuh  mcts_csv_avg_time.cu  mcts_csv_coverage.cu  mcts_csv_min_time.cu  mcts_csv_random.cu  ops_spmv.cuh  partition.hpp  platform_mcts.cu  platform_mcts.cuh  platform_mcts_coverage.cu  platform_mcts_min_time.cu  platform_mcts_random.cu  row_part_spmv.cuh  split_mat.hpp  spmv.cu  spmv_brute.cu  spmv_comparison.cu  spmv_mcts_balancehist.cu  spmv_mcts_coverage.cu  spmv_mcts_normanticorr.cu  spmv_mcts_normrootcorr.cu  spmv_mcts_random.cu  spmv_mcts_unvisited.cu  spmv_stream_brute.cu  spmv_stream_brute2.cu  spmv_stream_mcts.cuh  where.hpp
static/: perl_1n_4r_150000_src_spmv_coverage.csv  perl_1n_4r_150000_src_spmv_min_time.csv  perl_1n_4r_150000_src_spmv_random.csv  src_spmv_coverage_1n_4r_15000.csv  src_spmv_coverage_1n_4r_150000.csv  src_spmv_coverage_1n_4r_1500000.csv  vortex_4n_1r_spmv.csv
tenzing-dfs/examples/: CMakeLists.txt  spmv.cu
tenzing-dfs/include/tenzing/dfs/: dfs.hpp
tenzing-dfs/src/: CMakeLists.txt  dfs.cpp
tenzing-mcts/: CMakeLists.txt
tenzing-mcts/examples/: CMakeLists.txt  halo_anticorr.cu  halo_balance.cu  halo_coverage.cu  halo_min_time.cu  halo_run_strategy.hpp  mcts_csv_coverage.cu  spmv_coverage.cu  spmv_min_time.cu  spmv_random.cu  spmv_run_strategy.cuh
tenzing-mcts/include/tenzing/mcts/: counters.hpp  mcts.hpp  mcts_node.hpp  mcts_strategy.hpp  mcts_strategy_anti_corr.hpp  mcts_strategy_avg_time.hpp  mcts_strategy_balance_hist.hpp  mcts_strategy_coverage.hpp  mcts_strategy_fast_min.hpp  mcts_strategy_norm_anti_corr.hpp  mcts_strategy_norm_root_corr.hpp  mcts_strategy_random.hpp  mcts_strategy_unvisited.hpp
tenzing-mcts/src/: CMakeLists.txt  counters.cpp  mcts.cpp  mcts_node.cpp
tenzing-mcts/src_mcts_test/: mcts.cpp  pingpong.cpp
test/: test_expand_spmv.cu  test_gpu_graph.cu  test_main.cpp  test_main_mpi.cpp  test_noop_graph.cpp
vortex/: 12nodes.sh  16nodes.sh  mcts-halo-anticorr.sh  mcts-halo-balance.sh  mcts-halo-coverage.sh  mcts-halo-fastest.sh  pll_1node.sh  pll_2node.sh  pll_4node.sh  spmv-mcts-coverage.sh  spmv-stream-brute.sh  spmv-stream-brute2.sh  spmv_comparison_1node.sh  tio_1node.sh  tio_2node.sh  tio_4node.sh
