[tool.poetry]
name = "postprocess"
version = "0.1.0"
description = ""
authors = ["Carl pearson <cwpears@sandia.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.2"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
graphviz = "^0.17"
sympy = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
